--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 # Ouiche
 
+**Ouiche** is a fast spell-checker in C++, designed to be efficient by using a
+compact Radix Trie with a dynamic Damerau-Levenshtein distance to compute
+the word suggestions.
+
 > Peter — Et moi pour les gonzesses je suis super d’accord avec toi. Mais pour
 > la bouffe je vois pas ce que tu veux dire. Tu aurais envie de manger quoi
 > exactement ?
@@ -14,11 +18,7 @@
 >
 > Steven — Tu es sûr ?
 
--- La Classe Américaine - http://ouich.es/#ouiche
-
-**Ouiche** is a fast spell-checker in C++, designed to be efficient by using a
-compact Radix Trie with a dynamic Damerau-Levenshtein distance to compute
-the word suggestions.
+— La Classe Américaine - http://ouich.es/#ouiche
 
 # Build instructions
 
